[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["awesome_tools"]

[project]
name = "django_awesome_tools"
version = "1.5.5"
authors = [
    {name = "Cayo Rodrigues", email = "cayo.rodrigues1914@gmail.com"},
]
maintainers = [
    {name = "Cayo Rodrigues", email = "cayo.rodrigues1914@gmail.com"},
]
description = "Awesome functions and classes for Django and Django Rest Framework"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "django", "utils", "serializers", "generic", "views", "viewsets", "mixins",
    "email", "login", "model", "manager", "custom", "action", "shortcut", "error",
    "simple", "rest", "framework", "dj", "drf", "admin", "hash", "password", "user",
    "filter", "queryset", "cache", "management", "by auth token", "by user", "group",
    "key", "docs", "documentation", "spectacular", "customize", "swagger", "openapi",
]
license = {text = "MIT License"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "djangorestframework",
    "django-custom-cache-page",
    "drf-spectacular",
]

[project.urls]
repository = "https://github.com/cayo-rodrigues/django-awesome-tools"